--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,8 @@
 RewriteEngine On
 
-# Redirect all requests from example.com/some-page.html to example.com/some-page
+# Remove .html extension from URLs
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.+)\.html$ /$1 [L,R=301]
+RewriteRule ^(.*)$ $1.html [L]
 
-# Internally rewrite requests from example.com/some-page to some-page.html
-RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule ^(.+)$ $1.html [L]
 
